# sample

./: about.html  deliciously.html  fieldops.html  index.html  sample.html
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py  content_agent.py  image_agent.py  layout_agent.py  orchestrator.py  personalization_agent.py
backend/app/api/v1/: auth.py  pages.py  router.py  trips.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: generated_page.py  trip.py  user.py
backend/app/schemas/: page.py  trip.py  user.py
backend/app/services/: auth_service.py  page_service.py  trip_service.py
backend/tests/: conftest.py  test_auth.py  test_pages.py  test_trips.py
css/: style.css
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/trip/[id]/: page.tsx
frontend/src/components/trip/: BudgetSection.tsx  DynamicRenderer.tsx  GallerySection.tsx  HeroSection.tsx  ItinerarySection.tsx  MembersSection.tsx  OverviewSection.tsx  RecommendationsSection.tsx  TipsSection.tsx
frontend/src/lib/: api.ts  cache.ts
frontend/src/types/: page.ts
js/: cache-service.js
